--- a/weekThree/style/_hd&ft.scss
+++ b/weekThree/style/_hd&ft.scss
@@ -85,6 +85,10 @@ footer{
     h2{
       display: flex;
       align-items: center;
+      gap: 16px;
+      a{
+        color:  $color-white;
+      }
     }
   }
   .footer-bottom{
